welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: not found: value R
	if(litMessage == R)
                         ^BDRBuggle:7: error: not found: value avancer
		avancer()
                ^BDRBuggle:9: error: not found: value L
	else if(litMessage == L)	
                              ^BDRBuggle:12: error: not found: value avancer
		avancer()
                ^BDRBuggle:14: error: not found: value I
	else if(litMessage == I)	
                              ^BDRBuggle:18: error: not found: value avancer
		avancer()
                ^BDRBuggle:20: error: not found: value A
	else if(litMessage == A)	
                              ^BDRBuggle:22: error: not found: value avancer
		avancer()
                ^BDRBuggle:24: error: not found: value B
	else if(litMessage == B)	
                              ^BDRBuggle:26: error: not found: value avancer
		avancer()
                ^BDRBuggle:27: error: not found: value avancer
		avancer()
                ^BDRBuggle:29: error: not found: value C
	else if(litMessage == C)	
                              ^BDRBuggle:31: error: not found: value avancer
		avancer(); avancer(); avancer()
                ^BDRBuggle:31: error: not found: value avancer
		avancer(); avancer(); avancer()
                           ^BDRBuggle:31: error: not found: value avancer
		avancer(); avancer(); avancer()
                                      ^BDRBuggle:33: error: not found: value Z
	else if(litMessage == Z)	
                              ^BDRBuggle:35: error: not found: value reculer
		reculer()
                ^BDRBuggle:37: error: not found: value Y
	else if(litMessage == Y)	
                              ^BDRBuggle:39: error: not found: value reculer
		reculer(); reculer()
                ^BDRBuggle:39: error: not found: value reculer
		reculer(); reculer()
                           ^BDRBuggle:41: error: not found: value X
	else if(litMessage == X)	
                              ^BDRBuggle:43: error: not found: value reculer
		reculer(); reculer(); reculer()
                ^BDRBuggle:43: error: not found: value reculer
		reculer(); reculer(); reculer()
                           ^BDRBuggle:43: error: not found: value reculer
		reculer(); reculer(); reculer()
                                      ^